--- a/cpcx/Pages/Shared/_LoginPartial.cshtml
+++ b/cpcx/Pages/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using cpcx.Entities
-@inject SignInManager<User> SignInManager
-@inject UserManager<User> UserManager
+@inject SignInManager<CpcxUser> SignInManager
+@inject UserManager<CpcxUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
