--- a/cpcx/Pages/Shared/_Layout.cshtml
+++ b/cpcx/Pages/Shared/_Layout.cshtml
@@ -22,6 +22,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
+                        <li asp-authorize class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Postcard/Send">Send Postcard</a>
+                        </li>
+                        <li asp-authorize class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Postcard/Register">Register Postcard</a>
+                        </li>
+                        <li asp-authorize class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/User/Index">Register Postcard</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
