--- a/cpcx/Pages/Index.cshtml
+++ b/cpcx/Pages/Index.cshtml
@@ -1,4 +1,4 @@
-﻿ @page
+﻿@page
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
@@ -8,7 +8,9 @@
     <h1 class="display-4">Welcome to cPCX</h1>
     <p>Camping PostCard eXchange is here to allow you to send and receive postcards in EMF, through SneakerNet.</p>
     <p>The fundamental idea is: for each postcard you send, you will receive one back from a random member in this event.</p>
-    <p>This website is heavily inspired by <a href="https://www.postcrossing.com/about">Postcrossing</a>, which allows you to do the same with people from all over the world. Please do join Postcrossing if you like sending and receiving postcards!</p>
+    <p>This website is heavily inspired by <a href="https://www.postcrossing.com/about">Postcrossing</a>, 
+        which allows you to do the same with people from all over the world. 
+        Please do join Postcrossing if you like sending and receiving postcards!</p>
 
     
 </div>
