--- a/cpcx/Pages/Shared/_Layout.cshtml
+++ b/cpcx/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Postcard/Register">Register Postcard</a>
                         </li>
                         <li asp-authorize class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/User/Index">Register Postcard</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/User/Index">Profile</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
