--- a/cpcx/Pages/Postcard/Send.cshtml
+++ b/cpcx/Pages/Postcard/Send.cshtml
@@ -19,7 +19,7 @@
     </ul>
     <form method="post">
         <input type="checkbox" data-val="true"
-               data-val-required="Please tick this statement before receving an address."
+               data-val-required="Please tick this statement before receiving an address."
                id="SendPostcardNoticeAcknowledged"> <p>I've read the notes above and want to receive an address to where I'll send a postcard.</p>
         <submit />
     </form>
