--- a/cpcx/Pages/Index.cshtml
+++ b/cpcx/Pages/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
+<div>
     <h1 class="display-4">Welcome to cPCX</h1>
     <p>Camping PostCard eXchange is here to allow you to send and receive postcards in EMF, through SneakerNet.</p>
     <p>The fundamental idea is: for each postcard you send, you will receive one back from a random member in this event.</p>
