--- a/cpcx/Pages/Postcard/Send.cshtml
+++ b/cpcx/Pages/Postcard/Send.cshtml
@@ -1,8 +1,16 @@
 @page
+@using cpcx.Extensions
 @model cpcx.Pages.Postcard.Send
-
 <div>
     <h1 class="display-4">Send a Postcard</h1>
+
+    @if (!string.IsNullOrWhiteSpace(Model.Message))
+    {
+        <div>
+            @Html.StatusMessage(Model.Message, Model.MessageCssType!.Value)
+        </div>
+    }
+
     <p>Travelling: @Model.TravellingPostcards out of @Model.MaxTravellingPostcards postcards</p>
     
     @if (Model.CanUserSendPostcards)
@@ -21,10 +29,12 @@
             </li>
         </ul>
         <form method="post">
-            <input type="checkbox" data-val="true"
-                   data-val-required="Please tick this statement before receiving an address."
-                   id="SendPostcardNoticeAcknowledged"> <p>I've read the notes above and want to receive an address to where I'll send a postcard.</p>
-            <input type="submit" value="Request Address" />
+            <div>
+                <input asp-for="@Model.NotesAcknowledged"> <label asp-for="@Model.NotesAcknowledged">I've read the notes above and want to receive an address to where I'll send a postcard.</label>
+            </div>
+            <div>
+                <input type="submit" value="Request Address"/>
+            </div>
         </form>
     }
     else
