Travelling postcard works Status messages can pass between pages

--- a/cpcx/Pages/Index.cshtml
+++ b/cpcx/Pages/Index.cshtml
@@ -8,10 +8,10 @@
 <div>
     <h1 class="display-4">Welcome to cPCX</h1>
 
-    @if (!string.IsNullOrWhiteSpace(Model.Message))
+    @if (!string.IsNullOrWhiteSpace(Model.StatusMessage))
     {
         <div>
-            @Html.StatusMessage(Model.Message, Model.MessageCssType!.Value)
+            @Html.StatusMessage(Model.StatusMessage, Model.StatusMessageCssType!.Value)
         </div>
     }
 
