Remove alias, use username Add controller to check username uniqueness Add profile description Add 1 to sender sent postcard and received received postcard for stats Add user profile

--- a/cpcx/Pages/Shared/_Layout.cshtml
+++ b/cpcx/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using cpcx.Entities
+@inject UserManager<CpcxUser> UserManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -29,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Postcard/Register">Register Postcard</a>
                         </li>
                         <li asp-authorize class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/User/Index">Profile</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/User/Index" asp-route-alias="@UserManager.GetUserName(User)" >Profile</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
