--- a/cpcx/Pages/Postcard/Index.cshtml
+++ b/cpcx/Pages/Postcard/Index.cshtml
@@ -16,12 +16,12 @@
     @if (Model.IsTravellingPostcard)
     {
         <p>Postcard @Model.Postcard.FullPostCardId will go to...</p>
-        <p>@Model.Postcard.Receiver.Alias (@Model.Postcard.Receiver.Pronouns.GetDescription())</p>
+        <p>@Model.Postcard.Receiver.UserName (@Model.Postcard.Receiver.Pronouns.GetDescription())</p>
         <p>Address: @Model.PostcardAddress</p>
     }
     else
     {
-        <p>Sent on @Model.Postcard.SentOn by @Model.Postcard.Sender.Alias</p>
-        <p>Received on @Model.Postcard.ReceivedOn by @Model.Postcard.Receiver.Alias</p>
+        <p>Sent on @Model.Postcard.SentOn by @Model.Postcard.Sender.UserName</p>
+        <p>Received on @Model.Postcard.ReceivedOn by @Model.Postcard.Receiver.UserName</p>
     }
 </div>
