Add StatusMessage partial instead of repeating logic for showing status messages Better understanding of TempData and redirects Switched to username for login, can register new users

--- a/cpcx/Areas/Identity/Pages/Account/Register.cshtml
+++ b/cpcx/Areas/Identity/Pages/Account/Register.cshtml
@@ -9,18 +9,13 @@
 <div class="row">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+            <h2>Create a new account (You can set an email after creating the account)</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Alias" class="form-control" autocomplete="username" aria-required="true" placeholder="alias" />
-                <label asp-for="Input.Alias">Alias</label>
-                <span asp-validation-for="Input.Alias" class="text-danger"></span>
+                <input asp-for="Input.Username" class="form-control" autocomplete="username" aria-required="true" placeholder="username" />
+                <label asp-for="Input.Username">Username</label>
+                <span asp-validation-for="Input.Username" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
