--- a/cpcx/Pages/Index.cshtml
+++ b/cpcx/Pages/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@page
-@using cpcx.Extensions
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
@@ -8,12 +7,7 @@
 <div>
     <h1 class="display-4">Welcome to cPCX</h1>
 
-    @if (!string.IsNullOrWhiteSpace(Model.StatusMessage))
-    {
-        <div>
-            @Html.StatusMessage(Model.StatusMessage, Model.StatusMessageCssType!.Value)
-        </div>
-    }
+    <partial name="_StatusMessage" model="Model.StatusMessage" />
 
     <p>Camping PostCard eXchange is here to allow you to send and receive postcards in EMF, through SneakerNet.</p>
     <p>The fundamental idea is: for each postcard you send, you will receive one back from a random member in this event.</p>
