--- a/cpcx/Pages/Guidelines.cshtml
+++ b/cpcx/Pages/Guidelines.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model PrivacyModel
+@model GuidelinesModel
 @{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Community Guidelines";
 }
 <h1>@ViewData["Title"]</h1>
 
