--- a/cpcx/Pages/Postcard/Register.cshtml
+++ b/cpcx/Pages/Postcard/Register.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Register a Postcard";
 }
 
-<div class="text-center">
+<div class="text-center" xmlns="http://www.w3.org/1999/html">
     <h1 class="display-4">@ViewData["Title"]</h1>
 
     <partial name="_StatusMessage" model="Model.StatusMessage" />
     
-    <p>If you have received a postcard, register it here!</p>
+    <p>If you have received a postcard, register it here!</p>   
 
     <form method="post">
         <div>
@@ -19,5 +19,7 @@
             <input type="submit" value="Register Postcard" />
         </div>
     </form>
+    
+    <p>Have you received a postcard without a Postcard ID or it is incorrect? We can help <a asp-page="/Postcard/SenderUnknown">search the Postcard ID</a> for you.</p>
 
 </div>
