--- a/cpcx/Pages/Shared/_Layout.cshtml
+++ b/cpcx/Pages/Shared/_Layout.cshtml
@@ -32,10 +32,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Postcard/Register">Register Postcard</a>
                         </li>
                         <li asp-authorize class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Event/Index" asp-route-eventPublicId="EMF26">EMF</a>
+                        </li>
+                        <li asp-authorize class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/User/Index" asp-route-alias="@UserManager.GetUserName(User)" >Profile</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Guidelines">Community Guidelines</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
