Allow change address for EMF26 (remove events to join for now) TLC for css styling for forms Register postcard: add custom message to sender (TODO send it on email)

--- a/cpcx/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/cpcx/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -16,11 +16,11 @@
                 <label asp-for="Input.Username" class="form-label"></label>
             </div>
             <div class="form-floating mb-3">
-                <select asp-for="Input.Pronoun" asp-items="@Model.Pronouns"></select>
+                <select asp-for="Input.Pronoun" asp-items="@Model.Pronouns" class="form-select"></select>
                 <label asp-for="Input.Pronoun" class="form-label"></label>
             </div>
             <div class="form-floating mb-3">
-                <textarea asp-for="Input.ProfileDescription"></textarea>
+                <textarea asp-for="Input.ProfileDescription" class="form-control" style="height: 100px"></textarea>
                 <label asp-for="Input.ProfileDescription" class="form-label"></label>
                 <span asp-validation-for="Input.ProfileDescription" class="text-danger"></span>
             </div>
