--- a/cpcx/Pages/Shared/_Layout.cshtml
+++ b/cpcx/Pages/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - cpcx - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2024-@DateTime.UtcNow.Year - cpcx - <a asp-area="" asp-page="/Guidelines">Community Guidelines</a>
         </div>
     </footer>
 
