--- a/cpcx/Pages/Shared/_LoginPartial.cshtml
+++ b/cpcx/Pages/Shared/_LoginPartial.cshtml
@@ -6,8 +6,14 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage @User.Identity?.Name! Profile">Hello @User.Identity?.Name!</a>
+    <li asp-authorize class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Hello @User.Identity?.Name!
+        </a>
+        <ul class="dropdown-menu">
+            <li><a class="dropdown-item" asp-area="" asp-page="/User/Index" title="See @User.Identity?.Name! Profile" asp-route-alias="@UserManager.GetUserName(User)">See Profile</a></li>
+            <li><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage @User.Identity?.Name! Profile">Settings</a></li>
+        </ul>
     </li>
     <li class="nav-item">
         <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
